--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment-5</title>
+    <title>Donate Bangladesh</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
     <!--======================= google font============================ -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,7 +78,6 @@
                 </div>
               </div>
              <!-- =============================modal start===================== -->
-             <button class="btn" >open modal</button>
             <dialog id="my_modal_1" class="modal">
              <div class="modal-box text-center">
             <h2 class="text-3xl font-bold">Congrates!</h2>
