--- a/blog.html
+++ b/blog.html
@@ -93,5 +93,7 @@
     </div>
  </footer>
 <script src="./js/blog.js"></script>
+<script src="./js/utilities.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
